--- a/traductor/templates/traductor/index.html
+++ b/traductor/templates/traductor/index.html
@@ -18,7 +18,7 @@
       </button>
     </nav>
     <div class="container">
-      <form  method="post">
+      <form  method="get">
         {% csrf_token %}
         <div class="form-group">
           {{ form.as_p }}
